--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,16 @@ version: '3.8'
 
 services:
   file-sharing:
-    build: .
+    image: python:3.11-slim
     container_name: file-sharing-app
+    working_dir: /app
+    command: >
+      sh -c "pip install --no-cache-dir -r requirements.txt && python ip.py"
     ports:
       - "5000:5000"
     volumes:
+      - ./:/app
       - ./uploads:/app/uploads
     restart: unless-stopped
     environment:
       - PYTHONUNBUFFERED=1
-    healthcheck:
-      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:5000')"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 5s
